--- a/index.css
+++ b/index.css
@@ -1,42 +1,116 @@
 * {
     line-height: 1.5;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    background: rgb(23, 3, 5);
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, .5);
+}
+
+.header_logo {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.header_logo a {
+    color: white;
+    text-decoration: none;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
+}
+
+nav ul li {
+    margin-right: 15px;
+}
+
+nav ul li:last-child {
+    margin-right: 0;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    text-decoration: underline;
 }
 
 body {
-    text-align: center;
-    background: linear-gradient(45deg, darkgrey, rgb(255, 30, 0));
-    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    background: linear-gradient(90deg, rgb(212, 51, 51), grey);
 }
 
 .container {
+    margin: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.recipe-content {
+    padding: 30px 40px;
+    position: relative;
     text-transform: uppercase;
     background: white;
-    width: 300px;
-    height: 400px;
-    border: 8px solid darkred;
+    height: 70%;
+    width: 70%;
+    border: 1px solid darkred;
     border-radius: 10px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, .5);
 }
 
-.recipes-pages {
-    font-size: large;
-    position: relative;
-    right: 20px;
-
+.container h1 {
+    text-align: center;
+    color: darkred;
+    font-size: 35px;
+    font-weight: 400;
+    margin-bottom: 25px;
 }
 
-img {
-    width: 400px;
-    height: 300px;
+.container h3 {
+    text-align: center;
+    font-size: 25px;
+    font-weight: 400;
 }
 
-ul {
+.container a {
+    text-decoration: none;
+    color: black;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 400;
+}
+
+.container li {
+    text-decoration: none;
+    color: black;
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 25px;
+    font-weight: 400;
+}
+
+.container ul {
+    text-align: center;
     list-style: none;
 }
 
-h1 {
-    color: darkred;
+.recipe-pages {
+    margin: 20px;
+    border: 1px solid darkred;
+    border-radius: 10px;
 }
